--- a/www/.htaccess
+++ b/www/.htaccess
@@ -2,3 +2,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 Redirect /larbs.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/rc/larbs.sh
+Redirect /arch.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/rc/arch.sh
