general cleanup, testing redirect added

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -3,3 +3,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 Redirect /larbs.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/src/larbs.sh
 Redirect /arch.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/src/arch.sh
+Redirect /testing.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/testing/src/larbs.sh
