--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 Redirect /larbs.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/src/larbs.sh
