--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 Redirect /larbs.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/larbs.sh
 Redirect /arch.sh https://raw.githubusercontent.com/LukeSmithxyz/LARBS/master/testing/arch.sh
-
+ErrorDocument 404 /index.html
